--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -3,10 +3,15 @@ name: Build and Push to Docker Hub
 on:
   push:
     branches: [ main ]
+    paths:
+      - "simple-app/**"
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: simple-app/
     steps:
       - uses: actions/checkout@v3
       - name: Login to Docker Hub
