--- a/simple-app/Dockerfile
+++ b/simple-app/Dockerfile
@@ -1,13 +1,20 @@
-FROM node:19.5.0-alpine
+# Use the official Node.js 16 image
+FROM node:lts-alpine
 
+# Set the working directory
 WORKDIR /app
 
+# Copy package.json and package-lock.json
 COPY package*.json ./
 
+# Install dependencies
 RUN npm install
 
+# Copy the rest of the application code
 COPY . .
 
-EXPOSE 3000
+# Expose the port that the application will use
+EXPOSE 8000
 
-CMD [ "node", "index.js" ]
+# Start the application
+CMD [ "node", "app.js" ]
