--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -14,12 +14,21 @@ jobs:
         working-directory: simple-app/
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+
       - name: Build the Docker image
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-node-app .
+
       - name: Push the Docker image to Docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/my-node-app:latest
