--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -14,11 +14,14 @@ jobs:
         working-directory: simple-app/
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+
+      - name: npm install
+        run: npm install
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
